# chatT2

./: README.md  json_schema.json  pyproject.toml
chatt2/: __init__.py
chatt2/agents/: __init__.py  base_agent.py  evaluator.py  executor.py  mentor.py
chatt2/knowledge_source/data/: __init__.py
chatt2/knowledge_source/data/function_repository/gene_function_annotation/: annotation_result.txt  fasta_nucleotide_text.fasta
chatt2/knowledge_source/data/images_database/static/: catalog.json  catalog.xlsx  collection.txt  intro.md
chatt2/knowledge_source/data/images_database/static/images_retrieval/: catalog.xlsx
chatt2/knowledge_source/data/long_context_map/: __init__.py
chatt2/knowledge_source/data/long_context_map/static/: intro.txt
chatt2/knowledge_source/data/long_context_map/static/gene_translation/: intro.json
chatt2/knowledge_source/data/long_context_map/static/smile_url/: intro.json
chatt2/knowledge_source/data/vector_database/articles figures/MEDLINE_26484067/: Fig 1.txt
chatt2/knowledge_source/data/vector_database/articles figures/MEDLINE_28952581/: Fig 1.txt  Fig 3.txt
chatt2/knowledge_source/data/vector_database/articles figures/MEDLINE_29403952/: Fig 2.txt  Fig 4.txt
chatt2/knowledge_source/data/vector_database/articles figures/MEDLINE_31840099/: Fig 1.txt
chatt2/knowledge_source/data/vector_database/articles figures/WOS_000078894300002/: Fig 1.txt  Fig 2.txt  Fig 3.txt  Fig 4.txt  Fig 5.txt  Fig 6.txt
chatt2/knowledge_source/data/vector_database/articles figures/WOS_000171533400003/: Fig 13.txt  Fig 2.txt  (+2 more)
chatt2/knowledge_source/data/vector_database/vector_storage_512_json/: MEDLINE_24139182.json  MEDLINE_24970824.json  MEDLINE_25838474.json  MEDLINE_26484067.json  MEDLINE_28408685.json  MEDLINE_28952581.json  MEDLINE_29403952.json  MEDLINE_29496832.json  MEDLINE_31840099.json  MEDLINE_33004437.json  MEDLINE_33453953.json  WOS_000071707500004.json  WOS_000071707500005.json  WOS_000078879000004.json  WOS_000078894300002.json  WOS_000079377300019.json  WOS_000080436400043.json  WOS_000084519500011.json  WOS_000085587900019.json  WOS_000085798700011.json  WOS_000087915600016.json  WOS_000087942400005.json  WOS_000165866400013.json  WOS_000165941300015.json  WOS_000166498600028.json  WOS_000167810000004.json  WOS_000170600300011.json  WOS_000171533400003.json  WOS_000174106300002.json  WOS_000174106300003.json  WOS_000174690200012.json  WOS_000175790500038.json  WOS_000177369500002.json  WOS_000178327300010.json  WOS_000180072300033.json  WOS_000181864900017.json  WOS_000183669800019.json  WOS_000183919000012.json  WOS_000184479300008.json  WOS_000186083500015.json  (+734 more)
chatt2/knowledge_source/retrieval/: __init__.py  function_repository.py  recall_rate_adapter.py  retrieve_images.py  retrieve_structured_data.py  retrieve_vector_database.py  sql.py
chatt2/template/: __init__.py  function_calling.json  function_calling_system_prompt.txt  fuzz_sql.txt  modify_sql.txt  simple_answer.txt  sql.txt  tool.json
chatt2/utils/: __init__.py  error.py  file_read_write.py  llm_api.py  stream.py  switch_format.py  time.py
(+1273 files in other folders)
