[project]
name = "ChatT2"
version = "4"
authors = [{ name = "Yihan Wang" }, { name = "Yihui Zhuang" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "openai~=1.30.1",
    "pandas~=2.2.2",
    "numpy~=1.26.4",
    "sqlalchemy~=2.0.30",
    "rdkit~=2023.9.6",
    "pyMSAviz~=0.4.2",
    "fuzzywuzzy~=0.18.0",
    "biopython~=1.84",
    "openpyxl~=3.1.5",
    "python-levenshtein~=0.25.1",
]

[tool.pdm]
distribution = false

[tool.black]
line-length = 320

[tool.ruff]
preview = true
line-length = 150
target-version = "py38"

[tool.ruff.lint]
ignore = ["COM812", "ISC001", "PLC0415", "PLR2004", "RUF029", "TID252", "UP035", "ERA001", "RET504", "W391", "RET503", "PERF401","I001"]
select = [
    "A",
    "ARG",
    "C4",
    "C90",
    "COM",
    "E",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
]

[tool.pdm.scripts]
dev = "uvicorn main:app --reload"
fmt = { composite = ["ruff format", "ruff check --fix-only"] }
install-mmseqs = "conda install -c conda-forge -c bioconda mmseqs2 -y"
install-mafft = "conda install conda-forge::mafft -y"
install-conda-deps = { composite = ["install-mmseqs", "install-mafft" ] }

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"main.ipynb" = ["F821"]

[tool.isort]
profile = "black"
line_length = 320
