[project]
name = "chatt2" 
version = "0.0.1"  
authors = [{ name = "Wang Yihan", email = "202011059157@mail.bnu.edu.cn" }]  
readme = "README.md" 
license = { text = "MIT" } 
requires-python = ">=3.9" 
dependencies = [fuzzywuzzy==0.18.0
                numpy==1.24.3
                openai==1.63.0
                pandas==1.4.2
                pymsaviz==0.5.0
                Requests==2.32.3
                SQLAlchemy==1.4.41
                ~umpy==1.24.4
                ]

[tool.setuptools]
packages = ["chatt2"] 
